# rs_discord_nostr

./: .env.example  CLAUDE.md  Cargo.toml
docs/superpowers/plans/: 2026-03-30-rs-discord-nostr-impl.md
docs/superpowers/specs/: 2026-03-30-rs-discord-nostr-design.md
src/: app.rs  config.rs  discord.rs  error.rs  lib.rs  main.rs  nostr.rs  state.rs  transport.rs
tests/: bridge_test.rs  discord_test.rs  keys_test.rs  nostr_test.rs
