[package]
name = "rs_discord_nostr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rs_discord_nostr"
path = "src/main.rs"

[dependencies]
nostr-sdk        = { version = "0.44.1", features = ["nip59"] }
nostr-relay-pool = "0.44.0"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-wsocket    = "0.13"
serenity         = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend"] }
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
dotenvy          = "0.15"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror        = "2"
anyhow           = "1"
async-trait      = "0.1"
tempfile         = "3"
clap             = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
